[package]
name = "whitch"
version = "0.1.0"
authors = ["Nathan Jent"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = "0.13.0"
generational-arena = { version = "0.2", default-features = false }

[build-dependencies]
quote = "1.0.10"
tiled = { version = "0.9.4", default-features = false }

[profile.dev]
opt-level = 2
debug = true

[profile.release]
panic = "abort"
lto = true
debug = true
codegen-units = 1
